--- a/gocoding-KongFuPanda.html
+++ b/gocoding-KongFuPanda.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Exercise 2: Imaage Searcing Website</h1>
+    <h1>Exercise 2: Image Searcing Website</h1>
     <hr />
     <span style="white-space: nowrap;">Search your Image here</span>
     <input type="text" name="Kongfu" value="Kung Fu Panda" />
@@ -18,12 +18,18 @@
     <br />
     <a href="#">For more click here</a>
     <hr />
-    <h6>Feedback Form:</h6>
-    <p>Name:</p>
+    <label>Feedback Form</label>    
+    <br />
+    <label>Name:</label>
+    <br />
     <input type="Text" name="name" value="" />
-    <p>Date:</p>
+    <br />
+    <label>Date:</label>
+    <br />
     <input type="Text" name="name" value="mm/dd/yyyy" />
-    <p>Comment:</p>
+    <br />
+    <label>Comment:</label>
+    <br />
     <textarea></textarea>
     <br />
     <button>Submit</button>
